--- a/admin-data-console/.gitignore
+++ b/admin-data-console/.gitignore
@@ -28,7 +28,7 @@ Temporary Items
 ### Gradle ###
 .gradle
 build/
-!build/libs/*
+!build/libs/*.jar
 
 # Ignore Gradle GUI config
 gradle-app.setting
