--- a/lib-data-console/gradle.properties
+++ b/lib-data-console/gradle.properties
@@ -1,9 +1,9 @@
 #
 # Project settings
 #
-group = no.rbrastad.enonic
-projectName = lib-data-console
+group = no.rbrastad.enonic.lib
+projectName = data-console
 appName = no.rbrastad.enonic.lib.data.console
 displayName = Data Console Library
 xpVersion = 6.9.3
-version = 0.0.1
+version = 0.0.3
